--- a/WebVisualizations/compare.html
+++ b/WebVisualizations/compare.html
@@ -43,7 +43,7 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
         <div class="col-12">
         <h1>Comparison: Latitude vs. X</h1>
         <hr class = "my-4">
-        <p>Click any plot to get an in-depth analysis</p>
+        <p>Click any plot to find out more information</p>
         </div>
     </div>
     <div class="row">
