--- a/WebVisualizations/humid.html
+++ b/WebVisualizations/humid.html
@@ -46,9 +46,9 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
                 <hr class = "my-4">
                 <p class="lead">
                 <img src="assets/images/Fig2.png" alt="Humidity" style="width:100%;height:95%;padding:10px;display:block;">
-                </p>
+                </
                 <br>
-                <p class ="lead">Humidity shows no relationship with Latitude, although the driest readings were seen in the far Northern Hemisphere
+                <p class ="lead">There is no relationship between humidity and latitude, although data points from the far Northern Hemisphere are the least humid. 
                 </p>
             </div>
         </div>
