--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -6,7 +6,7 @@
 <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/superhero/bootstrap.min.css" rel="stylesheet" 
 integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNjeHu" crossorigin="anonymous">
 <meta charset = "UTF-8">
-<title>Latitude</title>
+<title>Weather & Latitude Analysis</title>
 <link rel="stylesheet" type = "text/css" href= "style.css">
 </head>
 
@@ -47,9 +47,9 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
                 <hr class = "my-4">
                 <p class="lead">
                 <img src="assets/images/Fig1.png" alt="Max Temp" style="float:left;width:300px;height:250px;padding-right:10px;display:block;">
-                The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-                <p class ="lead">After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. 
-                 Factors we looked at included: temperature, cloudiness, wind speed and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+                The purpose of this exercise is to analyze the relationship between weather patterns and proximity to the equator. To accomplish this task, we ping data from the OpenWeatherMap API to assemble a large dataset of over 500 cities.</p>
+                <p class ="lead">After putting together the dataset, we use Matplotlib to plot different weather attributes in the context of latitudinal locations. 
+                 The attributes were temperature, cloudiness, wind speed, and humidity. This site provides the source data and analytic visualizations, as well as explanations/descriptions of any trends or correlations observed.</p>
             </div>
         </div>
         <div class= "col-5">
