--- a/WebVisualizations/max.html
+++ b/WebVisualizations/max.html
@@ -48,9 +48,8 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
                 <img src="assets/images/Fig1.png" alt="Max Temp" style="width:100%;height:95%;padding:10px;display:block;">
                 </p>
                 <br>
-                <p class ="lead">As expected, the weather becomes signficantly
-                warmer as one approaches the equator (0 deg. latitude). Due to the tilt of the earth's axis at this time of year, the Southern Hemisphere temperatures are warmer than Northern
-                Hemisphere temperatures.
+                <p class ="lead">As is common knowledge, the weather becomes signficantly
+                warmer as one approaches the equator. 
                 </p>
             </div>
         </div>
