--- a/WebVisualizations/wind.html
+++ b/WebVisualizations/wind.html
@@ -48,8 +48,7 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
                 <img src="assets/images/Fig4.png" alt="Wind Speed" style="width:100%;height:95%;padding:10px;display:block;">
                 </p>
                 <br>
-                <p class ="lead">Next to no relationship between Latitude and Wind Speed although higher winds were observed at higher Northern Latitudes.
-                </p>
+                <p class ="lead">There is no correlation between Latitude and Wind Speed, but there are a few data points observing higher wind speeds at higher latitudes.
             </div>
         </div>
         <div class= "col-5">
