--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -43,7 +43,7 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
     <div class = "row mt-5">
         <div class = "col-7">
             <div class="jumbotron">
-                <h1>Summary: Latitude vs X</h1>
+                <h1>Latitude vs. Weather Attributes</h1>
                 <hr class = "my-4">
                 <p class="lead">
                 <img src="assets/images/Fig1.png" alt="Max Temp" style="float:left;width:300px;height:250px;padding-right:10px;display:block;">
